--- a/cv.html
+++ b/cv.html
@@ -1,140 +1,244 @@
+<!DOCTYPE html>
+<html>
 
-FLAT 2 SLYVAN COURT  •  145A ABBEY ROAD  •  LONDON  •  NW6 4SP
-PHONE 07761821663  •  E-MAIL tim.c.knowles@gmail.com 
+	<head>
+		<title> My Resume </title>
+	</head>
 
-Dr TIM KNOWLES 
-MBChB (Hons) BSc (Hons)
+	<body>
 
-CURRICULUM VITAE
+<header>
 
-CURRENT POSITION
 
- 2012 - present	
+FLAT 2 SLYVAN COURT  .  145A ABBEY ROAD  .  LONDON  .  NW6 4SP
+PHONE 07761821663  .  E-MAIL tim.c.knowles@gmail.com 
+
+<h1>
+	Dr TIM KNOWLES 
+	MBChB (Hons) BSc (Hons)
+</h1>
+
+<h2>CURRICULUM VITAE</h2>
+
+</header>
+
+<section>
+
+<h2>CURRENT POSITION</h2>
+
+<div class="date"> 2012 - present</div>
 Cardiology Teaching Fellow: Royal Brompton & Harefield NHS Trust
 
-PREVIOUS POSTS
+</section>
 
-2011-2012
+<section>
 
+<h2>PREVIOUS POSTS</h2>
 
-2010-2011	
-Academic Foundation Year 2 Doctor: Imperial College Healthcare NHS Trust – Hammersmith Hospital:  Acute Medicine, Renal Medicine, Department for Health Informatics Directorate
-Foundation Year 1 Doctor: Mid Essex Hospitals NHS Trust
-Broomfield Hospital: Gastroenterology, Upper GI surgery and Care of the Elderly
+<div class="date">2011-2012 </div>
+	Academic Foundation Year 2 Doctor: Imperial College Healthcare NHS Trust – Hammersmith Hospital:  Acute Medicine, Renal Medicine, Department for Health Informatics Directorate
 
-EDUCATION & QUALIFICATIONS
+<div class="date">2010-2011</div>
+	Foundation Year 1 Doctor: Mid Essex Hospitals NHS Trust
+	Broomfield Hospital: Gastroenterology, Upper GI surgery and Care of the Elderly
 
-2012	
-MRCP Part 1
-2004-2010	MBChB with Honours, Faculty of Medicine and Dentistry, University of Bristol, UK
-2007-2008	Erasmus European Exchange Programme, Facultad de Medicina, Universidad de Granada, Spain. Rotations in Orthopaedics, Rheumatology, Acute Medicine, Cardiology, ENT and Respiratory Medicine.
-2006-2007	Physiological Science BSc (Hons) with First Class Honours, University of Bristol Modules - Muscle, motility and migration; The heart in health and disease; Brain and behaviour; Cardiovascular system in health and disease.
-1998-2004	Southend High School for Boys, Southend, Essex, UK A Levels (2004): Biology (A), Chemistry (A), Physics (A), General; AS Levels (2003) Geography (A); GCSEs 9 Subjects at A* 3 Subjects at A.
+</section>
 
+<section>
 
-AWARDS AND DISTINCTIONS
+<h2>EDUCATION & QUALIFICATIONS</h2>
 
-2009	
-Distinction in Applied Clinical Sciences; Merit in Reproductive Health & Care of the Newborn; Merit in Community orientated medical practice (Epidemiology, Child Health, Care of the Elderly, General Practice & Dermatology).
-2008	Merit in Medicine and Surgery.
-2006	Distinction in Cardiovascular, Musculoskeletal and Respiratory Systems; Merit in Gastrointestinal, Neurological and Endocrine Systems 
-2005	Merit in Molecular and Cellular Basis of Medicine; Merit in Human Basis of Medicine.
-PUBLICATIONS & RESEARCH
+<div class="date">2012	</div>
+	MRCP Part 1
+<div class="date">2004-2010 </div>
+	MBChB with Honours, Faculty of Medicine and Dentistry, University of Bristol, UK
+<div style="date">2007-2008	</div>
+	Erasmus European Exchange Programme, Facultad de Medicina, Universidad de Granada, Spain. Rotations in Orthopaedics, Rheumatology, Acute Medicine, Cardiology, ENT and Respiratory Medicine.
+<div style="date">2006-2007	</div>
+	Physiological Science BSc (Hons) with First Class Honours, University of Bristol Modules - Muscle, motility and migration; The heart in health and disease; Brain and behaviour; Cardiovascular system in health and disease.
+<div style="date">1998-2004	</div>
+	Southend High School for Boys, Southend, Essex, UK A Levels (2004): Biology (A), Chemistry (A), Physics (A), General; AS Levels (2003) Geography (A); GCSEs 9 Subjects at A* 3 Subjects at A.
 
-Nov 2012
+</section>
 
+<section>
 
+<h2>AWARDS AND DISTINCTIONS</h2>
 
+<div style="date">2009	</div>
+	Distinction in Applied Clinical Sciences; Merit in Reproductive Health & Care of the Newborn; Merit in Community orientated medical practice (Epidemiology, Child Health, Care of the Elderly, General Practice & Dermatology).
+<div style="date">2008	</div>
+	Merit in Medicine and Surgery.
+<div style="date">2006	</div>
+	Distinction in Cardiovascular, Musculoskeletal and Respiratory Systems; Merit in Gastrointestinal, Neurological and Endocrine Systems 
+<div style="date">2005	</div>
+	Merit in Molecular and Cellular Basis of Medicine; Merit in Human Basis of Medicine.
 
+</section>
 
-2012
-
-
-
-
-2012
-
-
-
-
-
-
-Sep 2011	
-Knowles T, Scott G, Southgate E & Wyatt J. Clinicians who Code: Submitted to the BMJ and awaiting reviewers decision. An analysis of the urgent need for junior clinical leadership in NHS health IT.
-
+<section>
 
 
-Automation bias within electronic prescribing decision support systems (DSS): An ongoing randomised control study (www.eprescribingresearch.com). I conceived the study, acted as primary investigator during my 4-month academic F2 placement and secured funding from Imperial Biomedical Research Centre.
+<h2> PUBLICATIONS & RESEARCH </h2>
 
-Observations Research– In collaboration with a colleague, I built an online tool http://observationsresearch.appspot.com/ that utilises choice-based conjoint analysis to investigate which observation parameters are most valued by clinicians in prioritising care of unwell patients. We anticipate this will inform patient-risk scoring systems, by untangling the complex “gut feeling” of clinical assessment from physiological trends. 
+<div style="date">Sep 2011</div>	
+	Knowles T, Scott G, Southgate E &amp; Wyatt J. Clinicians who Code: Submitted to the BMJ and awaiting reviewers decision. An analysis of the urgent need for junior clinical leadership in NHS health IT.
 
-Rotundo A, Knowles T, Tang C-B, Kadirkamanathan S, Harvey M. Laparoscopic repair of post-traumatic diaphragmatic hernia with mesh insertion. Epublication: WeBSurg.com, Sept 2011;11(9). URL: http://www.websurg.com/ref/doi-vd01en3407.htm
 
-Oct 2010	Gravante G, Knowles T, Ong SL, Al-Taan O, Metcalfe M, Dennison AR, Lloyd DM. Bile Changes after Liver Surgery: Experimental and Clinical Lessons for Future Applications. Dig Surg 2010 Nov;27(6):450-460. PMID: 21061749
+<div style="date">2012</div>
+	Automation bias within electronic prescribing decision support systems (DSS): An ongoing randomised control study (www.eprescribingresearch.com). I conceived the study, acted as primary investigator during my 4-month academic F2 placement and secured funding from Imperial Biomedical Research Centre.
 
-Oct 2010
+<div style="date">2012</div>
+	Observations Research– In collaboration with a colleague, I built an online tool http://observationsresearch.appspot.com/ that utilises choice-based conjoint analysis to investigate which observation parameters are most valued by clinicians in prioritising care of unwell patients. We anticipate this will inform patient-risk scoring systems, by untangling the complex "gut feeling" of clinical assessment from physiological trends. 
+
+<div style="date">Sep 2011</div>
+	Rotundo A, Knowles T, Tang C-B, Kadirkamanathan S, Harvey M. Laparoscopic repair of post-traumatic diaphragmatic hernia with mesh insertion. Epublication: WeBSurg.com, Sept 2011;11(9). URL: http://www.websurg.com/ref/doi-vd01en3407.htm
+
+<div style="date">Oct 2012</div>
+	Gravante G, Knowles T, Ong SL, Al-Taan O, Metcalfe M, Dennison AR, Lloyd DM. Bile Changes after Liver Surgery: Experimental and Clinical Lessons for Future Applications. Dig Surg 2010 Nov;27(6):450-460. PMID: 21061749
+
+<div style="date">Oct 2010</div>
 	Gravante G, Knowles T, Ong SL, Al-Taan O, Metcalfe M, Dennison A, Lloyd D. Future clinical applications of bile analysis. ANZ J Surg 2010 Oct;80(10):679-680. PMID: 21063120 
 
-Jun 2008	The dose response effect obtained with microwave ablation in an ex-vivo porcine liver model. Department of Hepatobiliary Surgery, Leicester Royal Infirmary. Student selected research project. Supervised by Mr. DM Lloyd. 
+<div style="date">Jun 2008	</div>
+	The dose response effect obtained with microwave ablation in an ex-vivo porcine liver model. Department of Hepatobiliary Surgery, Leicester Royal Infirmary. Student selected research project. Supervised by Mr. DM Lloyd. 
 
-Jun 2008	What is the physiological difference in response between emotional and physical arousal? Is the traditional model of fear too simplistic? - Physiology BSc research project.  Presented at the AIMS CETL National Intercalators’ conference.
-AUDIT
+<div style="date">Jun 2008	</div>
+	What is the physiological difference in response between emotional and physical arousal? Is the traditional model of fear too simplistic? - Physiology BSc research project.  Presented at the AIMS CETL National Intercalators’ conference.
 
-Dec 2011
+</section>
+
+<section>
+
+<h2>AUDIT</h2>
+
+<div style="date">Dec 2011</div>
 	
 Audit: Vital Signs - Monitoring and response to abnormal vital signs in the Hammersmith acute medical unit. 
-Nov 2010	Audit: Polyp retrieval rate at lower GI endoscopy – Presentation at MEHT Broomfield endoscopy committee. November 2010
+	
+<div style="date">Nov 2010</div>
 
-CLINICAL COMPETENCIES
-	Central venous catheterisation (Jugular and Femoral); Ascitic aspiration and drainage; Lumbar puncture; administration of local anaesthesia & wound suturing.  
+Audit: Polyp retrieval rate at lower GI endoscopy – Presentation at MEHT Broomfield endoscopy committee. November 2010
+
+</section>
+
+<section>
+
+<h2>CLINICAL COMPETENCIES</h2>
+
+Central venous catheterisation (Jugular and Femoral); Ascitic aspiration and drainage; Lumbar puncture; administration of local anaesthesia & wound suturing.
+
 Core skills: per UK Foundation Programme Curriculum www.foundationprogramme.nhs.uk. Procedural skills include: Peripheral venous cannulation, venepuncture, arterial blood gas sampling, urethral catheterization, nasogastric tube insertion.
 
-COURSES
-Sep 2012
+</section>
 
-May 2012
+<section>
 
-Feb 2012
+<h2>COURSES</h2>
+
+
+
+
+
+<div style="date">Sep 2012</div>
 	Understanding Simulation as an Educational Tool – Royal Brompton and Harefield Trust.
-Tully 2: Next Generation Ideas – Royal College of Physicians Future Hospital Commission.
-Simulation training course - Chelsea & Westminster hospital
-British Cardiovascular Society: a career in Cardiology, Royal College of Physicians, London
-Dec 2011
-	British Cardiovascular Society: a year in Cardiology, Royal College of Physicians, London
-Oct 2011	Advanced Life Support Course. Hammersmith Hospital, Imperial College NHS trust. 
-Jul 2011
-	A Practical Introduction to ICU. University College London, One day basics of critical care course
-Feb 2011
-	Teaching TIPS teaching for Foundation Doctors.  University College London , one-day course
-Jan 2010
 
+<div style="date">May 2012</div>
+	Tully 2: Next Generation Ideas – Royal College of Physicians Future Hospital Commission.
+
+<div style="date">May 2012</div>
+	Simulation training course - Chelsea & Westminster hospital
+
+<div style="date">Feb 2012 </div>
+	British Cardiovascular Society: a career in Cardiology, Royal College of Physicians, London
+
+<div style="date">Dec 2011</div>
+	British Cardiovascular Society: a year in Cardiology, Royal College of Physicians, London
+
+<div style="date">Oct 2011</div>
+	Advanced Life Support Course. Hammersmith Hospital, Imperial College NHS trust. 
+<div style="date">Jul 2011</div>
+	A Practical Introduction to ICU. University College London, One day basics of critical care course
+<div style="date">Feb 2011</div>
+	Teaching TIPS teaching for Foundation Doctors.  University College London , one-day course
+<div style="date">Jan 2010</div>
 	Expedition Medicine- 4 day Course. Wilderness Medical Training. Chamonix, France. 
-TEACHING & LEADERSHIP EXPERIENCE
-2012	Designed and implemented an online collaboration website for the Department of Health to achieve clinical consensus for a standard mental health discharge summary. 
-	Junior doctor representative to the Royal College of Physicians informatics directorate: providing consultation on mobile handover applications and hospital discharge data standards. 
-	Clinical teaching fellow at Harefield Hospital. I spend 2 days per week designing, delivering and evaluating high fidelity simulation training to medical students and health professionals. I provide weekly bedside clinical teaching of medical students from Imperial.  I am currently conducting educational research relating to use of simulation in medical and clinical education.  I have also designed a website to promote courses at the simulation centre and have led on restructuring the audio-visual resources available to the department. 
-2010-2011
+
+</section>
+
+<section>
+
+<h2>TEACHING & LEADERSHIP EXPERIENCE</h2>
+
+<div style="date">2012</div>
+
+	<p>Designed and implemented an online collaboration website for the Department of Health to achieve clinical consensus for a standard mental health discharge summary. 
+	
+	<p>Junior doctor representative to the Royal College of Physicians informatics directorate: providing consultation on mobile handover applications and hospital discharge data standards. 
+	
+	<p>Clinical teaching fellow at Harefield Hospital. I spend 2 days per week designing, delivering and evaluating high fidelity simulation training to medical students and health professionals. I provide weekly bedside clinical teaching of medical students from Imperial. 
+
+	<p>I am currently conducting educational research relating to use of simulation in medical and clinical education.  I have also designed a website to promote courses at the simulation centre and have led on restructuring the audio-visual resources available to the department. 
+
+
+<div style="date">2010-2011</div>
 	Designed and implemented junior doctor led teaching program for Medical Students at Broomfield Hospital.
 	Mess President, Broomfield Hospital, Chelmsford. Responsible for the running of the doctors’ mess, managing the accounts and organising the Summer Ball. 
-2008-2009	Vice president of the University of Bristol Emergency Medicine Society
-PERSONAL  INTERESTS
-	Cooking; Sailing; Cycling; SCUBA diving; Skiing; Squash; Indoor football; Web Design - examples of my work can be found at:
+<div style="date">2008-2009	</div>
 
-•	harefieldstarcentre.org
-•	casadecuestaroman.com
-•	dulwichchamberchoir.org.uk
+	Vice president of the University of Bristol Emergency Medicine Society
+
+</section>
+
+<section>
+
+<h2>PERSONAL  INTERESTS</h2>
+	<ul>
+	<li>Cooking</li>
+	<li>Sailing</li>
+	<li>Cycling</li>
+	<li>SCUBA diving</li>
+	<li>Skiing</li>
+	<li>Squash</li>
+	<li>Indoor football</li> 
+	</ul>
+
+Web Design - examples of my work can be found at
+<ul>
+<li>harefieldstarcentre.org</li> 
+<li>casadecuestaroman.com</li> 
+<li>dulwichchamberchoir.org.uk</li> 
+</ul>
+</section>
+
+<section>
 
 GMC  STATUS
-	Full Registration awarded July 2011. GMC number 7082690
+
+Full Registration awarded July 2011. GMC number 7082690
+
 PROFESSIONAL MEMBERSHIP
-	Medical Defence Union: Membership No 485003E
+Medical Defence Union: Membership No 485003E
 British Medical Association: Membership No 8325458
 British Cardiovascular Society: Membership Number No 3261 
 SKILLS
-	Languages: English, conversational Spanish 
+
+Languages: English, conversational Spanish 
 Computer IT: Mac OSX, Linux, Windows and Microsoft Office. 
 Driving Licence: Full UK
 
-REFERENCES
+</section>
+
+<section>
+
+<h2>REFERENCES</h2>
 
 Available on request
+
+</section>
+
+</body>
+
+</html>
+
+
