--- a/cv.html
+++ b/cv.html
@@ -89,7 +89,7 @@ PHONE 07761821663  .  E-MAIL tim.c.knowles@gmail.com
 	<div class="content">Automation bias within electronic prescribing decision support systems (DSS): An ongoing randomised control study (www.eprescribingresearch.com). I conceived the study, acted as primary investigator during my 4-month academic F2 placement and secured funding from Imperial Biomedical Research Centre.</div>
 
 <div class="date">2012</div>
-	<div class="content">Observations Research– In collaboration with a colleague, I built an online tool http://observationsresearch.appspot.com/ that utilises choice-based conjoint analysis to investigate which observation parameters are most valued by clinicians in prioritising care of unwell patients. We anticipate this will inform patient-risk scoring systems, by untangling the complex "gut feeling" of clinical assessment from physiological trends. </div>
+	<div class="content">Observations Research- In collaboration with a colleague, I built an online tool http://observationsresearch.appspot.com/ that utilises choice-based conjoint analysis to investigate which observation parameters are most valued by clinicians in prioritising care of unwell patients. We anticipate this will inform patient-risk scoring systems, by untangling the complex "gut feeling" of clinical assessment from physiological trends. </div>
 
 <div class="date">Sep 2011</div>
 	<div class="content">Rotundo A, Knowles T, Tang C-B, Kadirkamanathan S, Harvey M. Laparoscopic repair of post-traumatic diaphragmatic hernia with mesh insertion. Epublication: WeBSurg.com, Sept 2011;11(9). URL: http://www.websurg.com/ref/doi-vd01en3407.htm</div>
@@ -104,7 +104,7 @@ PHONE 07761821663  .  E-MAIL tim.c.knowles@gmail.com
 	<div class="content">The dose response effect obtained with microwave ablation in an ex-vivo porcine liver model. Department of Hepatobiliary Surgery, Leicester Royal Infirmary. Student selected research project. Supervised by Mr. DM Lloyd. </div>
 
 <div class="date">Jun 2008	</div>
-	<div class="content">What is the physiological difference in response between emotional and physical arousal? Is the traditional model of fear too simplistic? - Physiology BSc research project.  Presented at the AIMS CETL National Intercalators’ conference.</div>
+	<div class="content">What is the physiological difference in response between emotional and physical arousal? Is the traditional model of fear too simplistic? - Physiology BSc research project.  Presented at the AIMS CETL National Intercalators' conference.</div>
 
 </section>
 
@@ -118,7 +118,7 @@ PHONE 07761821663  .  E-MAIL tim.c.knowles@gmail.com
 	
 <div class="date">Nov 2010</div>
 
-<div class="content">Audit: Polyp retrieval rate at lower GI endoscopy – Presentation at MEHT Broomfield endoscopy committee. November 2010</div>
+<div class="content">Audit: Polyp retrieval rate at lower GI endoscopy - Presentation at MEHT Broomfield endoscopy committee. November 2010</div>
 
 </section>
 
@@ -141,10 +141,10 @@ Core skills: per UK Foundation Programme Curriculum www.foundationprogramme.nhs.
 
 
 <div class="date">Sep 2012</div>
-	<div class="content">Understanding Simulation as an Educational Tool – Royal Brompton and Harefield Trust.</div>
+	<div class="content">Understanding Simulation as an Educational Tool - Royal Brompton and Harefield Trust.</div>
 
 <div class="date">May 2012</div>
-	<div class="content">Tully 2: Next Generation Ideas – Royal College of Physicians Future Hospital Commission.</div>
+	<div class="content">Tully 2: Next Generation Ideas - Royal College of Physicians Future Hospital Commission.</div>
 
 <div class="date">May 2012</div>
 	<div class="content">Simulation training course - Chelsea &amp; Westminster hospital</div>
@@ -183,7 +183,7 @@ Core skills: per UK Foundation Programme Curriculum www.foundationprogramme.nhs.
 
 <div class="date">2010-2011</div>
 	<div class="content">Designed and implemented junior doctor led teaching program for Medical Students at Broomfield Hospital.
-	Mess President, Broomfield Hospital, Chelmsford. Responsible for the running of the doctors’ mess, managing the accounts and organising the Summer Ball. </div>
+	Mess President, Broomfield Hospital, Chelmsford. Responsible for the running of the doctors' mess, managing the accounts and organising the Summer Ball. </div>
 <div class="date">2008-2009	</div>
 
 	<div class="content">Vice president of the University of Bristol Emergency Medicine Society</div>
