--- a/cv.html
+++ b/cv.html
@@ -16,6 +16,7 @@ PHONE 07761821663  .  E-MAIL tim.c.knowles@gmail.com
 <h1>
 	Dr TIM KNOWLES 
 	MBChB (Hons) BSc (Hons)
+<img src="./image.jpg"
 </h1>
 
 <h2>CURRICULUM VITAE</h2>
